Fix average numbers spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,7 @@
   .greeting {
     font-family: "Permanent Marker";
     margin-right: 2rem;
+    font-size: 1.8rem;
   }
 
   .calendar {
@@ -183,16 +184,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-bottom: 5px;
   }
 
   .avg-number {
     font-size: 2rem;
     border: 4px solid #f37981;
     border-radius: 50%;
-    height: 100%;
     width: 50%;
     padding: 5%;
+    margin: 0;
   }
 
   /* User Data Section  */
@@ -203,8 +203,10 @@
     display: flex;
     align-items: space-around;
     border-top-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    opacity: 75%;
+    border-top-right-radius: 15px;
+    opacity: 65%;
+    color: #f3bf89;
+    margin-bottom: 0;
   }
   
   .right-side {
